// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli cli error cases should error if the config is malformed 1`] = `
"Checkup configuration is malformed:
plugins expected type Array<string>, but got undefined
tasks.someTask.isEnabled expected type boolean, but got \\"foo\\""
`;

exports[`@checkup/cli normal cli output with plugins should output checkup result 1`] = `
"=== Project
name:    checkup-project
version: 0.0.0

=== Repository Information
Active days:   0 days
Age:           0 days
Total commits: 0
Total files:   0

=== Checkup Configuration
configHash: 47def66968059c89c59bb41f477c180c
version:    0.0.0

mock task is being run
mock task2 is being run
mock task3 is being run
"
`;

exports[`@checkup/cli normal cli output with plugins should output checkup result in JSON 1`] = `
"{
  \\"meta\\": {
    \\"project\\": {
      \\"name\\": \\"checkup-project\\",
      \\"version\\": \\"0.0.0\\",
      \\"repository\\": {
        \\"totalCommits\\": 0,
        \\"totalFiles\\": 0,
        \\"age\\": \\"0 days\\",
        \\"activeDays\\": \\"0 days\\"
      }
    },
    \\"checkup\\": {
      \\"configHash\\": \\"47def66968059c89c59bb41f477c180c\\",
      \\"version\\": \\"0.0.0\\"
    }
  },
  \\"results\\": [
    {
      \\"meta\\": {
        \\"taskName\\": \\"mock-task\\",
        \\"friendlyTaskName\\": \\"Mock Task\\",
        \\"taskClassification\\": {
          \\"category\\": \\"insights\\",
          \\"priority\\": \\"high\\"
        }
      },
      \\"result\\": {
        \\"mockTask1\\": 5
      }
    },
    {
      \\"meta\\": {
        \\"taskName\\": \\"mock-task2\\",
        \\"friendlyTaskName\\": \\"Mock Task 2\\",
        \\"taskClassification\\": {
          \\"category\\": \\"insights\\",
          \\"priority\\": \\"high\\"
        }
      },
      \\"result\\": {
        \\"mockTask2\\": 10
      }
    },
    {
      \\"meta\\": {
        \\"taskName\\": \\"mock-task3\\",
        \\"friendlyTaskName\\": \\"Mock Task 3\\",
        \\"taskClassification\\": {
          \\"category\\": \\"insights\\",
          \\"priority\\": \\"high\\"
        }
      },
      \\"result\\": {
        \\"mockTask2\\": 10
      }
    }
  ]
}
"
`;

exports[`@checkup/cli normal cli output with plugins should run a single task if the task option is specified 1`] = `
"=== Project
name:    checkup-project
version: 0.0.0

=== Repository Information
Active days:   0 days
Age:           0 days
Total commits: 0
Total files:   0

"
`;

exports[`@checkup/cli normal cli output with plugins should use the config at the config path if provided 1`] = `
"=== Project
name:    checkup-project
version: 0.0.0

=== Repository Information
Active days:   0 days
Age:           0 days
Total commits: 0
Total files:   0

=== Checkup Configuration
configHash: 052fa270c6764ec1da0fa838bbc43dde
version:    0.0.0

mock task is being run
mock task2 is being run
"
`;
